--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                         <ul class="nav nav-pills">
                             <!--<li><a href=""><i class="fa fa-facebook"></i></a></li>
                             <li><a href=""><i class="fa fa-twitter"></i></a></li>-->
-                            <li><a href="https://www.google.com/+DerekThurber"><i class="fa fa-google-plus"></i></a></li>
+                            <li><a href="https://www.google.com/+DerekThurber" target="_blank"><i class="fa fa-google-plus"></i></a></li>
                             <!--<li><a href=""><i class="fa fa-dribbble"></i></a></li>-->
-                            <li><a href="https://www.linkedin.com/in/derekthurber"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/derekthurber" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
                     </div> 
                 </div>
@@ -58,50 +58,27 @@
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="index.html">Home</a></li>
-                        <li class="dropdown"><a href="#">Pages <i class="fa fa-angle-down"></i></a>
+                        <li><a href="index.html" class="active">Home</a></li>          
+                        <li class="dropdown"><a href="portfolio.html">Portfolio Pages<i class="fa fa-angle-down"></i></a>
                             <ul role="menu" class="sub-menu">
-                                <li><a href="aboutus.html">About</a></li>
-                                <li><a href="aboutus2.html">About 2</a></li>
-                                <li><a href="service.html">Services</a></li>
-                                <li><a href="pricing.html">Pricing</a></li>
-                                <li><a href="contact.html">Contact us</a></li>
-                                <li><a href="contact2.html">Contact us 2</a></li>
-                                <li><a href="404.html">404 error</a></li>
-                                <li><a href="coming-soon.html">Coming Soon</a></li>
-                            </ul>
-                        </li>                    
-                        <li class="dropdown"><a href="blog.html">Blog <i class="fa fa-angle-down"></i></a>
-                            <ul role="menu" class="sub-menu">
-                                <li><a href="blog.html">Blog Default</a></li>
-                                <li><a href="blogtwo.html">Timeline Blog</a></li>
-                                <li><a href="blogone.html">2 Columns + Right Sidebar</a></li>
-                                <li><a href="blogthree.html">1 Column + Left Sidebar</a></li>
-                                <li><a href="blogfour.html">Blog Masonary</a></li>
-                                <li><a href="blogdetails.html">Blog Details</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown active"><a href="portfolio.html">Portfolio <i class="fa fa-angle-down"></i></a>
-                            <ul role="menu" class="sub-menu">
-                                <li><a class="active" href="portfolio.html">Portfolio Default</a></li>
+                                <li><a href="portfolio.html">Portfolio</a></li>
                                 <li><a href="portfoliofour.html">Isotope 3 Columns + Right Sidebar</a></li>
                                 <li><a href="portfolioone.html">3 Columns + Right Sidebar</a></li>
                                 <li><a href="portfoliotwo.html">3 Columns + Left Sidebar</a></li>
                                 <li><a href="portfoliothree.html">2 Columns</a></li>
                                 <li><a href="portfolio-details.html">Portfolio Details</a></li>
                             </ul>
-                        </li>                         
-                        <li><a href="shortcodes.html ">Shortcodes</a></li>                    
+                        </li>                                            
                     </ul>
                 </div>
-                <div class="search">
+                <!--<div class="search">
                     <form role="form">
                         <i class="fa fa-search"></i>
                         <div class="field-toggle">
                             <input type="text" class="search-form" autocomplete="off" placeholder="Search">
                         </div>
                     </form>
-                </div>
+                </div>-->
             </div>
         </div>
     </header>
@@ -145,7 +122,7 @@
                                 </div>
                                 <div class="portfolio-view">
                                     <ul class="nav nav-pills">
-                                        <li><a href="portfolio-details.html"><i class="fa fa-link"></i></a></li>
+                                        <li><a href="/portfolio-pages/tutor-training.html"><i class="fa fa-link"></i></a></li>
                                         
                                     </ul>
                                 </div>
