--- a/portfolio-pages/tutor-training.html
+++ b/portfolio-pages/tutor-training.html
@@ -93,7 +93,7 @@
                     <div class="action">
                         <div class="col-sm-12">
                             <h1 class="title">Portfolio</h1>
-                            <p>Be Creative</p>
+                            <p>Be Creative. Be Professional. Be Effective.</p>
                         </div>
                     </div>
                 </div>
@@ -110,10 +110,10 @@
                 </div>
                 <div class="col-sm-6">
                     <div class="project-name overflow">
-                        <h2 class="bold">Sailing Vivamus </h2>
+                        <h2 class="bold">Virtual Tutor Training </h2>
                         <ul class="nav navbar-nav navbar-default">
-                            <li><a href="#"><i class="fa fa-clock-o"></i>February11,2014</a></li>
-                            <li><a href="#"><i class="fa fa-tag"></i>Branding</a></li>
+                            <li><a href="#"><i class="fa fa-clock-o"></i>2013-2014</a></li>
+                            <li><a href="#"><i class="fa fa-tag"></i>E-LEarning</a></li>
                         </ul>
                     </div>
                     <div class="project-info overflow">
@@ -129,19 +129,19 @@
                         <h3>Skills:</h3>
                         <ul class="nav navbar-nav navbar-default">
                             <li><a href="#"><i class="fa fa-check-square"></i>Design</a></li>
-                            <li><a href="#"><i class="fa fa-check-square"></i>HTML/CSS</a></li>
-                            <li><a href="#"><i class="fa fa-check-square"></i>Javascript</a></li>
-                            <li><a href="#"><i class="fa fa-check-square"></i>Backend</a></li>
+                            <li><a href="#"><i class="fa fa-check-square"></i>E-Learning Authoring</a></li>
+                            <li><a href="#"><i class="fa fa-check-square"></i>SmartBuilder</a></li>
+                            <li><a href="#"><i class="fa fa-check-square"></i>Adult Learning Theory</a></li>
                         </ul>
                     </div>
                     <div class="client overflow">
                         <h3>Client:</h3>
                         <ul class="nav navbar-nav navbar-default">
-                            <li><a href="#"><i class="fa fa-bolt"></i>Okler Themes</a></li>
+                            <li><a href="www.riverland.edu" target="_blank"><i class="fa fa-bolt"></i>Riverland Community College</a></li>
                         </ul>
                     </div>
                     <div class="live-preview">
-                        <a href="#" class="btn btn-common uppercase">Live preview</a>
+                        <a href="http://tinyurl.com/riverland-basictraining" target="_blank" class="btn btn-common uppercase">Live preview</a>
                     </div>
                 </div>
             </div>
@@ -230,9 +230,7 @@
     <footer id="footer">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12 text-center bottom-separator">
-                    <img src="/images/home/under.png" class="img-responsive inline" alt="">
-                </div>
+<!--
                 <div class="col-md-4 col-sm-6">
                     <div class="testimonial bottom">
                         <h2>Testimonial</h2>
@@ -256,6 +254,8 @@
                         </div>   
                     </div> 
                 </div>
+-->
+<!--
                 <div class="col-md-3 col-sm-6">
                     <div class="contact-info bottom">
                         <h2>Contacts</h2>
@@ -293,10 +293,11 @@
                         </form>
                     </div>
                 </div>
+-->
                 <div class="col-sm-12">
                     <div class="copyright-text text-center">
-                        <p>&copy; Your Company 2014. All Rights Reserved.</p>
-                        <p>Designed by <a target="_blank" href="http://www.themeum.com">Themeum</a></p>
+                        <p>&copy; Derek Thurber. All Rights Reserved.</p>
+<!--                        <p>Designed by <a target="_blank" href="http://www.themeum.com">Themeum</a></p>-->
                     </div>
                 </div>
             </div>
