--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                 </div>
                                 <div class="portfolio-view">
                                     <ul class="nav nav-pills">
-                                        <li><a href="portfolio-details.html"><i class="fa fa-link"></i></a></li>
+                                        <li><a href="/portfolio-pages/tutor-training.html"><i class="fa fa-link"></i></a></li>
                                         
                                     </ul>
                                 </div>
