add portfolio pages and some other changes to home page

--- a/portfolio-pages/mshe-resources.html
+++ b/portfolio-pages/mshe-resources.html
@@ -52,14 +52,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    <img src="/images/portfolio-details/tutor-training.png" class="img-responsive" alt="">
+                    <img src="../images/portfolio-details/MSHE-resources.png" class="img-responsive" alt="">
                 </div>
                 <div class="col-sm-6">
                     <div class="project-name overflow">
-                        <h2 class="bold">Virtual Tutor Training </h2>
+                        <h2 class="bold">MSHE Student Resources Site </h2>
                         <ul class="nav navbar-nav navbar-default">
-                            <li><a href="#"><i class="fa fa-clock-o"></i>2013-2014</a></li>
-                            <li><a href="#"><i class="fa fa-tag"></i>E-LEarning</a></li>
+                            <li><a href="#"><i class="fa fa-clock-o"></i>2014-2015</a></li>
+                            <li><a href="#"><i class="fa fa-tag"></i>Web Design</a></li>
                         </ul>
                     </div>
                     <div class="project-info overflow">
@@ -75,19 +75,19 @@
                         <h3>Skills:</h3>
                         <ul class="nav navbar-nav navbar-default">
                             <li><a href="#"><i class="fa fa-check-square"></i>Design</a></li>
-                            <li><a href="#"><i class="fa fa-check-square"></i>E-Learning Authoring</a></li>
-                            <li><a href="#"><i class="fa fa-check-square"></i>SmartBuilder</a></li>
-                            <li><a href="#"><i class="fa fa-check-square"></i>Adult Learning Theory</a></li>
+                            <li><a href="#"><i class="fa fa-check-square"></i>HTML/CSS</a></li>
+                            <li><a href="#"><i class="fa fa-check-square"></i>JavaScript/Jquery</a></li>
+                            <li><a href="#"><i class="fa fa-check-square"></i>Web Development</a></li>
                         </ul>
                     </div>
                     <div class="client overflow">
                         <h3>Client:</h3>
                         <ul class="nav navbar-nav navbar-default">
-                            <li><a href="http://www.riverland.edu" target="_blank"><i class="fa fa-bolt"></i>Riverland Community College</a></li>
+                            <li><a href="http://www.sesp.northwestern.edu/higher-education/index.html" target="_blank"><i class="fa fa-bolt"></i>Northwestern University  School of Education and Social Policy </a></li>
                         </ul>
                     </div>
                     <div class="live-preview">
-                        <a href="http://tinyurl.com/riverland-basictraining" target="_blank" class="btn btn-common uppercase">Live preview</a>
+                        <a href="https://dwthurber.github.io/MSHE_Canvas_Resources/" target="_blank" class="btn btn-common uppercase">Live preview</a>
                     </div>
                 </div>
             </div>
@@ -103,16 +103,16 @@
                     <div class="portfolio-wrapper">
                         <div class="portfolio-single">
                             <div class="portfolio-thumb">
-                                <img src="../images/portfolio/3.png" class="img-responsive" alt="">
+                                <img src="../images/portfolio/9.png" class="img-responsive" alt="">
                             </div>
                             <div class="portfolio-view">
                                   <ul class="nav nav-pills">
-                                      <li><a href="../index.html"><i class="fa fa-link"></i></a></li>
+                                      <li><a href="../portfolio-pages/eccla.html"><i class="fa fa-link"></i></a></li>
                                   </ul>
                             </div>
                         </div>
                         <div class="portfolio-info ">
-                            <h2>Online Virtual Orientation</h2>
+                            <h2>MSHE Student Resources</h2>
                         </div>
                     </div>
                 </div>
@@ -120,37 +120,21 @@
                     <div class="portfolio-wrapper">
                         <div class="portfolio-single">
                             <div class="portfolio-thumb">
-                                <img src="../images/portfolio/6.png" class="img-responsive" alt="">
+                                <img src="../images/portfolio/2.png" class="img-responsive" alt="">
                             </div>
                             <div class="portfolio-view">
                                   <ul class="nav nav-pills">
-                                      <li><a href="../index.html"><i class="fa fa-link"></i></a></li>
+                                      <li><a href="../portfolio-pages/austinmn-symphony.html"><i class="fa fa-link"></i></a></li>
 
                                   </ul>
                               </div>
                         </div>
                         <div class="portfolio-info ">
-                            <h2>Online Parent Orientation</h2>
+                            <h2>Austin MN Symphony Website</h2>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3">
-                    <div class="portfolio-wrapper">
-                        <div class="portfolio-single">
-                            <div class="portfolio-thumb">
-                                <img src="../images/portfolio/5.png" class="img-responsive" alt="">
-                            </div>
-                            <div class="portfolio-view">
-                                  <ul class="nav nav-pills">
-                                      <li><a href="../index.html"><i class="fa fa-link"></i></a></li>
-                                  </ul>
-                            </div>
-                        </div>
-                        <div class="portfolio-info ">
-                            <h2>Tutor Training Manual</h2>
-                        </div>
-                    </div>
-                </div>
+                
             </div>
         </div>
     </section>
