fixing partials load on homepage

--- a/index.html
+++ b/index.html
@@ -405,5 +405,11 @@
     <script type="text/javascript" src="js/lightbox.min.js"></script>
     <script type="text/javascript" src="js/wow.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>    
+  <script>
+  $(document).ready(function(){
+      $('#header').load('partials/header.html');
+      $('#footer').load('partials/footer.html');
+    });
+  </script>
 </body>
 </html>
