--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                 </div>
                                 <div class="portfolio-view">
                                     <ul class="nav nav-pills">
-                                        <li><a href="portfolio-details.html"><i class="fa fa-link"></i></a></li>
+                                        <li><a href="portfolio-pages/mshe-resources.html"><i class="fa fa-link"></i></a></li>
                                         
                                     </ul>
                                 </div>
@@ -213,7 +213,7 @@
                                 </div>
                                 <div class="portfolio-view">
                                     <ul class="nav nav-pills">
-                                        <li><a href="portfolio-details.html"><i class="fa fa-link"></i></a></li>
+                                        <li><a href="portfolio-pages/eccla.html"><i class="fa fa-link"></i></a></li>
                                         
                                     </ul>
                                 </div>
