updates to pages and added favicon

--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
                                 </div>
                                 <div class="portfolio-view">
                                     <ul class="nav nav-pills">
-                                        <li><a href="portfolio-details.html"><i class="fa fa-link"></i></a></li>
+                                        <li><a href="portfolio-pages/training-manual.html"><i class="fa fa-link"></i></a></li>
                                         
                                     </ul>
                                 </div>
                             </div>
                             <div class="portfolio-info ">
-                                <h2>Tutor Training Handbook</h2>
+                                <h2>Tutor Training Manual</h2>
                             </div>
                         </div>
                     </div>
@@ -220,6 +220,24 @@
                             </div>
                             <div class="portfolio-info ">
                                 <h2>ECCLA Website</h2>
+                            </div>
+                        </div>
+                    </div>
+                  <div class="col-xs-6 col-sm-4 col-md-3 portfolio-item elearning">
+                        <div class="portfolio-wrapper">
+                            <div class="portfolio-single">
+                                <div class="portfolio-thumb">
+                                    <img src="images/portfolio/10.png" class="img-responsive" alt="">
+                                </div>
+                                <div class="portfolio-view">
+                                    <ul class="nav nav-pills">
+                                        <li><a href="index.html"><i class="fa fa-link"></i></a></li>
+                                        
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="portfolio-info ">
+                                <h2>Online Course Design</h2>
                             </div>
                         </div>
                     </div>
