--- a/portfolio-pages/training-manual.html
+++ b/portfolio-pages/training-manual.html
@@ -52,14 +52,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    <img src="/images/portfolio-details/tutor-training.png" class="img-responsive" alt="">
+                    <img src="/images/portfolio-details/training-manual.png" class="img-responsive" alt="">
                 </div>
                 <div class="col-sm-6">
                     <div class="project-name overflow">
-                        <h2 class="bold">Virtual Tutor Training </h2>
+                        <h2 class="bold">Peer Tutor Training Manual</h2>
                         <ul class="nav navbar-nav navbar-default">
                             <li><a href="#"><i class="fa fa-clock-o"></i>2013-2014</a></li>
-                            <li><a href="#"><i class="fa fa-tag"></i>E-LEarning</a></li>
+                            <li><a href="#"><i class="fa fa-tag"></i>Teaching and Learning</a></li>
                         </ul>
                     </div>
                     <div class="project-info overflow">
@@ -74,9 +74,9 @@
                     <div class="skills overflow">
                         <h3>Skills:</h3>
                         <ul class="nav navbar-nav navbar-default">
-                            <li><a href="#"><i class="fa fa-check-square"></i>Design</a></li>
+                            <li><a href="#"><i class="fa fa-check-square"></i>Graphic Design</a></li>
                             <li><a href="#"><i class="fa fa-check-square"></i>E-Learning Authoring</a></li>
-                            <li><a href="#"><i class="fa fa-check-square"></i>SmartBuilder</a></li>
+                            <li><a href="#"><i class="fa fa-check-square"></i>Adobe InDesign</a></li>
                             <li><a href="#"><i class="fa fa-check-square"></i>Adult Learning Theory</a></li>
                         </ul>
                     </div>
@@ -87,7 +87,7 @@
                         </ul>
                     </div>
                     <div class="live-preview">
-                        <a href="http://tinyurl.com/riverland-basictraining" target="_blank" class="btn btn-common uppercase">Live preview</a>
+                        <a href="http://issuu.com/dthurber/docs/peer_tutor_training_manual/1" target="_blank" class="btn btn-common uppercase">Live preview</a>
                     </div>
                 </div>
             </div>
@@ -138,16 +138,16 @@
                     <div class="portfolio-wrapper">
                         <div class="portfolio-single">
                             <div class="portfolio-thumb">
-                                <img src="../images/portfolio/5.png" class="img-responsive" alt="">
+                                <img src="../images/portfolio/1.png" class="img-responsive" alt="">
                             </div>
                             <div class="portfolio-view">
                                   <ul class="nav nav-pills">
-                                      <li><a href="../portfolio-pages/training-manual.html"><i class="fa fa-link"></i></a></li>
+                                      <li><a href="../portfolio-pages/tutor-training.html"><i class="fa fa-link"></i></a></li>
                                   </ul>
                             </div>
                         </div>
                         <div class="portfolio-info ">
-                            <h2>Tutor Training Manual</h2>
+                            <h2>Virtual Tutor Training</h2>
                         </div>
                     </div>
                 </div>
