--- a/portfolio-pages/tutor-training.html
+++ b/portfolio-pages/tutor-training.html
@@ -18,7 +18,7 @@
 	    <script src="js/html5shiv.js"></script>
 	    <script src="js/respond.min.js"></script>
     <![endif]-->       
-    <link rel="shortcut icon" href="images/ico/favicon.ico">
+    <link rel="shortcut icon" href="../images/ico/favicon.ico">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/images/ico/apple-touch-icon-144-precomposed.png">
     <link rel="/apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/images/ico/apple-touch-icon-72-precomposed.png">
@@ -52,7 +52,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    <img src="/images/portfolio-details/tutor-training.png" class="img-responsive" alt="">
+                    <img src="../images/portfolio-details/tutor-training.png" class="img-responsive" alt="">
                 </div>
                 <div class="col-sm-6">
                     <div class="project-name overflow">
@@ -87,7 +87,7 @@
                         </ul>
                     </div>
                     <div class="live-preview">
-                        <a href="http://tinyurl.com/riverland-basictraining" target="_blank" class="btn btn-common uppercase">Live preview</a>
+                        <a href="training-preview.html" class="btn btn-common uppercase">Live preview</a>
                     </div>
                 </div>
             </div>
