--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="This is my personal professional portfolio of work completed from web design to elearning content authoring to graphic design to learning outcome assessment and everything in between.">
+    <meta name="author" content="Derek Thurber">
     <title>Derek Thurber | Portfolio</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
