--- a/portfolio-pages/training-preview.html
+++ b/portfolio-pages/training-preview.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>Portfolio Details | Triangle</title>
+    <meta name="description" content="This is my personal professional portfolio of work completed from web design to elearning content authoring to graphic design to learning outcome assessment and everything in between.">
+    <meta name="author" content="Derek Thurber">
+    <title>Tutor Training Preview | Derek Thurber</title>
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link href="../css/font-awesome.min.css" rel="stylesheet">
     <link href="../css/lightbox.css" rel="stylesheet"> 
