--- a/portfolio-pages/training-manual.html
+++ b/portfolio-pages/training-manual.html
@@ -107,7 +107,7 @@
                             </div>
                             <div class="portfolio-view">
                                   <ul class="nav nav-pills">
-                                      <li><a href="../index.html"><i class="fa fa-link"></i></a></li>
+                                      <li><a href="../portfolio-pages/virtual-orientation.html"><i class="fa fa-link"></i></a></li>
                                   </ul>
                             </div>
                         </div>
