updated portfolio page content

--- a/portfolio-pages/training-manual.html
+++ b/portfolio-pages/training-manual.html
@@ -64,11 +64,11 @@
                     </div>
                     <div class="project-info overflow">
                         <h3>Project Info</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempus nibh sed elimttis adipiscing. Fusce in hendrerit purus. Suspendisse potenti. Proin quis eros odio, dapibus dictum mauris. Donec nisi libero, adipiscing id pretium eget, consectetur sit amet leo. Nam at eros quis mi egestas fringilla non nec purus.</p>
+                        <p>This tutor training manual was the result of a year ofAmeriCorps VISTA service at Riverland Community College. The peer tutoring program had been growing rapidly over the past several years but the quality of tutoring had not kept pace. Trainings were pulled together from disparate resources ad hoc and were not comprehensive or wholistically designed. This training manual was fully written and designed by me with support from the other professional tutoring center staff in order to compile and present a comprehensive and deliberately designed tutor training sequency in person and online. The fully interactive online training modules were also designed by me and more information can be found on the <a href="tutor-training.html">virtual tutor training project page.</a> For this manual included:</p>
                         <ul class="elements">
-                            <li><i class="fa fa-angle-right"></i> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                            <li><i class="fa fa-angle-right"></i> Donec tincidunt felis quis ipsum porttitor, non rutrum lorem rhoncus.</li>
-                            <li><i class="fa fa-angle-right"></i> Nam in quam consectetur nulla placerat dapibus ut ut nunc.</li>
+                            <li><i class="fa fa-angle-right"></i> A fully designed interactive PDF including graphics designed with Adobe CC.</li>
+                            <li><i class="fa fa-angle-right"></i> Compiled and written content for tutor training modules.</li>
+                            <li><i class="fa fa-angle-right"></i> InDesign project file including dynamic sections and comprehensive index.</li>
                         </ul>
                     </div>
                     <div class="skills overflow">
@@ -77,6 +77,7 @@
                             <li><a href="#"><i class="fa fa-check-square"></i>Graphic Design</a></li>
                             <li><a href="#"><i class="fa fa-check-square"></i>E-Learning Authoring</a></li>
                             <li><a href="#"><i class="fa fa-check-square"></i>Adobe InDesign</a></li>
+                            <li><a href="#"><i class="fa fa-check-square"></i>Adobe Illustrator</a></li>
                             <li><a href="#"><i class="fa fa-check-square"></i>Adult Learning Theory</a></li>
                         </ul>
                     </div>
