--- a/portfolio-pages/austinmn-symphony.html
+++ b/portfolio-pages/austinmn-symphony.html
@@ -64,12 +64,14 @@
                     </div>
                     <div class="project-info overflow">
                         <h3>Project Info</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempus nibh sed elimttis adipiscing. Fusce in hendrerit purus. Suspendisse potenti. Proin quis eros odio, dapibus dictum mauris. Donec nisi libero, adipiscing id pretium eget, consectetur sit amet leo. Nam at eros quis mi egestas fringilla non nec purus.</p>
+                        <p>I completely redisgned the Austin Minnesota Symphony Orchestra website from scratch. The redesign focused on creating a dynamic homepage which would provide information as needed to users and to improve the graphical layout of the site. All graphical components of the site as well as the functionality was customed designed by me including carousel graphics and interactions. The site was built on Google Sites to allow for free nonprofit hosting and easy editing after the completion of the redesign. Among other components, I designed the following capabilities for the site: </p>
                         <ul class="elements">
-                            <li><i class="fa fa-angle-right"></i> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                            <li><i class="fa fa-angle-right"></i> Donec tincidunt felis quis ipsum porttitor, non rutrum lorem rhoncus.</li>
-                            <li><i class="fa fa-angle-right"></i> Nam in quam consectetur nulla placerat dapibus ut ut nunc.</li>
+                            <li><i class="fa fa-angle-right"></i> Live ticket ordering form. </li>
+                            <li><i class="fa fa-angle-right"></i> Live updates for upcoming concerts and events. </li>
+                            <li><i class="fa fa-angle-right"></i> Social media integration for google+ and facebook integration.</li>
                         </ul>
+                      
+                      <p>As part of this redesign, I focused heavily on how the web presence for the Austin MN symphony was being used to market the orchestra and could increase ticket sales and the overall customer experience.</p>
                     </div>
                     <div class="skills overflow">
                         <h3>Skills:</h3>
