--- a/portfolio-pages/eccla.html
+++ b/portfolio-pages/eccla.html
@@ -58,18 +58,19 @@
                     <div class="project-name overflow">
                         <h2 class="bold">ECCLA Colorado Website </h2>
                         <ul class="nav navbar-nav navbar-default">
-                            <li><a href="#"><i class="fa fa-clock-o"></i>2013-2015</a></li>
+                            <li><a href="#"><i class="fa fa-clock-o"></i>2014-2015</a></li>
                             <li><a href="#"><i class="fa fa-tag"></i>Web Design</a></li>
                         </ul>
                     </div>
                     <div class="project-info overflow">
                         <h3>Project Info</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempus nibh sed elimttis adipiscing. Fusce in hendrerit purus. Suspendisse potenti. Proin quis eros odio, dapibus dictum mauris. Donec nisi libero, adipiscing id pretium eget, consectetur sit amet leo. Nam at eros quis mi egestas fringilla non nec purus.</p>
+                        <p>The Early Childhood Council Leadership Alliance of Colorado--a statewide consortium of Early Childhood Councils--was formed in 2014 and needed a website to provide key information to member institutions. I worked closely with the board of directors to design a site that could provide just in time information for alliance member organizations. This site was built on Google sites and I proved training for key personnel in the use and upkeep of the site. This included:</p>
                         <ul class="elements">
-                            <li><i class="fa fa-angle-right"></i> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                            <li><i class="fa fa-angle-right"></i> Donec tincidunt felis quis ipsum porttitor, non rutrum lorem rhoncus.</li>
-                            <li><i class="fa fa-angle-right"></i> Nam in quam consectetur nulla placerat dapibus ut ut nunc.</li>
+                            <li><i class="fa fa-angle-right"></i> A dynamic, sortable directory of member institutions</li>
+                            <li><i class="fa fa-angle-right"></i> Integration with google calendar and gogle drive for meeting minutes.</li>
+                            <li><i class="fa fa-angle-right"></i> A password protected member only area for private member-specific content.</li>
                         </ul>
+                      <p>In addition, the logo and other graphical components of the site were designed by me.</p>
                     </div>
                     <div class="skills overflow">
                         <h3>Skills:</h3>
