--- a/portfolio-pages/mshe-resources.html
+++ b/portfolio-pages/mshe-resources.html
@@ -64,11 +64,11 @@
                     </div>
                     <div class="project-info overflow">
                         <h3>Project Info</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempus nibh sed elimttis adipiscing. Fusce in hendrerit purus. Suspendisse potenti. Proin quis eros odio, dapibus dictum mauris. Donec nisi libero, adipiscing id pretium eget, consectetur sit amet leo. Nam at eros quis mi egestas fringilla non nec purus.</p>
+                        <p>When I came to the Master of Science in Higher Education program office as a graduate assistant, the program was in need of a redesign for how an online community was built and content was displayed and disseminated to students and alumni. The first major part of this process was a complete overhall of a cluttered and out of use student resources site. Using Jquery and clever web design, I built a new site that was embedable in Canvas courses which allowed for better display and organization of content. Among other things, this project resulted in a web app which could: </p>
                         <ul class="elements">
-                            <li><i class="fa fa-angle-right"></i> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                            <li><i class="fa fa-angle-right"></i> Donec tincidunt felis quis ipsum porttitor, non rutrum lorem rhoncus.</li>
-                            <li><i class="fa fa-angle-right"></i> Nam in quam consectetur nulla placerat dapibus ut ut nunc.</li>
+                            <li><i class="fa fa-angle-right"></i> Be sorted and filtered dynamically.</li>
+                            <li><i class="fa fa-angle-right"></i> Be searched for content using a jquery search plugin.</li>
+                            <li><i class="fa fa-angle-right"></i> Redesigned content interface and organization of content.</li>
                         </ul>
                     </div>
                     <div class="skills overflow">
