--- a/portfolio-pages/tutor-training.html
+++ b/portfolio-pages/tutor-training.html
@@ -64,11 +64,12 @@
                     </div>
                     <div class="project-info overflow">
                         <h3>Project Info</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempus nibh sed elimttis adipiscing. Fusce in hendrerit purus. Suspendisse potenti. Proin quis eros odio, dapibus dictum mauris. Donec nisi libero, adipiscing id pretium eget, consectetur sit amet leo. Nam at eros quis mi egestas fringilla non nec purus.</p>
+                        <p>The comprehensive online training modules were designed completely by me for the tutor training program at Riverland Community College as part of my AmeriCorps VISTA project. When I came to Riverland, the school was rapidly expanding to more online instruction and the tutoring program was expanding to adapt. This online training was built using SmartBuilder as a fully SCORM 1.4 and 2.0 compliant program to train tutors in the same comprehensive training program designed by me (more details on the <a href="training-manual.html">training manual project page</a>). The online training included among other things:</p>
                         <ul class="elements">
-                            <li><i class="fa fa-angle-right"></i> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                            <li><i class="fa fa-angle-right"></i> Donec tincidunt felis quis ipsum porttitor, non rutrum lorem rhoncus.</li>
-                            <li><i class="fa fa-angle-right"></i> Nam in quam consectetur nulla placerat dapibus ut ut nunc.</li>
+                            <li><i class="fa fa-angle-right"></i> Interactive game-based learning modules.</li>
+                            <li><i class="fa fa-angle-right"></i> Responsive virtual tutoring simulation environment.</li>
+                            <li><i class="fa fa-angle-right"></i> Comprehensive modules structure.</li>
+                            <li><i class="fa fa-angle-right"></i> Universal design concepts for accessibility compliance.</li>
                         </ul>
                     </div>
                     <div class="skills overflow">
@@ -78,6 +79,8 @@
                             <li><a href="#"><i class="fa fa-check-square"></i>E-Learning Authoring</a></li>
                             <li><a href="#"><i class="fa fa-check-square"></i>SmartBuilder</a></li>
                             <li><a href="#"><i class="fa fa-check-square"></i>Adult Learning Theory</a></li>
+                            <li><a href="#"><i class="fa fa-check-square"></i>Game-Based Learning</a></li>
+                            <li><a href="#"><i class="fa fa-check-square"></i>Virtual Simulation</a></li>
                         </ul>
                     </div>
                     <div class="client overflow">
