added portfolio page information

--- a/portfolio-pages/oakton-assessment.html
+++ b/portfolio-pages/oakton-assessment.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="col-sm-6">
                     <div class="project-name overflow">
-                        <h2 class="bold">Online Parent Orientation </h2>
+                        <h2 class="bold">Learning Outcome Assessment </h2>
                         <ul class="nav navbar-nav navbar-default">
                             <li><a href="#"><i class="fa fa-clock-o"></i>2014-2015</a></li>
                             <li><a href="#"><i class="fa fa-tag"></i>Assessment</a></li>
@@ -64,12 +64,15 @@
                     </div>
                     <div class="project-info overflow">
                         <h3>Project Info</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempus nibh sed elimttis adipiscing. Fusce in hendrerit purus. Suspendisse potenti. Proin quis eros odio, dapibus dictum mauris. Donec nisi libero, adipiscing id pretium eget, consectetur sit amet leo. Nam at eros quis mi egestas fringilla non nec purus.</p>
+                        <p>As a relatively new office, the office on New Student Experiences had a heavy emphasis on assessment of learning outcomes. I completed a comprehensive learning outcome assessment map including the following tasks: </p>
                         <ul class="elements">
-                            <li><i class="fa fa-angle-right"></i> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                            <li><i class="fa fa-angle-right"></i> Donec tincidunt felis quis ipsum porttitor, non rutrum lorem rhoncus.</li>
-                            <li><i class="fa fa-angle-right"></i> Nam in quam consectetur nulla placerat dapibus ut ut nunc.</li>
+                            <li><i class="fa fa-angle-right"></i> Establishing desired learning outcomes for new students, parents, and student peer leaders.</li>
+                            <li><i class="fa fa-angle-right"></i> Banchmarking learning outcomes to local and national New Student Orientation Outcomes based on best practices research from the National Orientation Directors Association (NODA).</li>
+                            <li><i class="fa fa-angle-right"></i> Determined and implemented assessment methods for learning outcomes.</li>
+                            <li><i class="fa fa-angle-right"></i> Compiled and presented data on learning outcomes in a poster session (see live preview) and presentations.</li>
                         </ul>
+                      <p>The learning outcomes were compiled and presented to the Student Success and Retention Committee and New Student Orientation Board. The powerpoint is presented below:</p>
+                      <iframe class="gslides" src="https://docs.google.com/presentation/d/17Y-gX3nxKNnQB94wWtHgneuWNkwexXd-cVW8NqTnbrg/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
                     </div>
                     <div class="skills overflow">
                         <h3>Skills:</h3>
@@ -87,7 +90,7 @@
                         </ul>
                     </div>
                     <div class="live-preview">
-                        <a href="http://www.comevoservice.com/training/intake.aspx?ReturnUrl=%2ftraining%2f%3fth%3doakton%252F400%26stage%3dTrue%26reload%3d1&th=oakton%2F400&stage=True&reload=1" target="_blank" class="btn btn-common uppercase">Live preview</a>
+                        <a href="https://drive.google.com/file/d/0B7-QMoqsr7BnVGxuT2ZPNlVzNzQ/view" target="_blank" class="btn btn-common uppercase">Live preview</a>
                     </div>
                 </div>
             </div>
