--- a/portfolio-pages/parent-orientation.html
+++ b/portfolio-pages/parent-orientation.html
@@ -64,12 +64,19 @@
                     </div>
                     <div class="project-info overflow">
                         <h3>Project Info</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempus nibh sed elimttis adipiscing. Fusce in hendrerit purus. Suspendisse potenti. Proin quis eros odio, dapibus dictum mauris. Donec nisi libero, adipiscing id pretium eget, consectetur sit amet leo. Nam at eros quis mi egestas fringilla non nec purus.</p>
-                        <ul class="elements">
-                            <li><i class="fa fa-angle-right"></i> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                            <li><i class="fa fa-angle-right"></i> Donec tincidunt felis quis ipsum porttitor, non rutrum lorem rhoncus.</li>
-                            <li><i class="fa fa-angle-right"></i> Nam in quam consectetur nulla placerat dapibus ut ut nunc.</li>
-                        </ul>
+                        <p>As part of my job at Oakton Community College, I designed an online parent orientation, including adapting in person parent orientation, establishing desired parent orientation learning outcomes, assessment methods for outcomes, and benchmarking desired outcomes with local and national standards. As part of this, I determined six key learning outcomes: </p>
+                      <ol class="elements">
+                        <li><p>Know issues experienced by students in the transition from high school and other previous academic environments.</p></li>
+                          <li>Identify campus resources and how their services contribute to student success.</li>
+                        <li>Know how students can get involved in co-curricular activities.</li>
+                        <li>Understand the importance of student data privacy. </li>
+                        <li>Feel a sense of community/connectedness to campus.</li>
+                        <li>Understand the importance of personal responsibility as it relates to being a successful college student.</li>
+
+                      </ol>
+                      <p>The online modules were designed to aling to these learning outcomes by providing information in discrete chunks of informations which built off of knowledge from prior modules. The assessment process is described in detail in the following presentation presented to the New Student Orientation Board and the Student Success and Retention Committee:</p>
+                      <iframe class="gslides" src="https://docs.google.com/presentation/d/1pX2n0hFH7qrHH2Ti_M8foeRnVxMxiBq8817RsGO2hSA/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                        
                     </div>
                     <div class="skills overflow">
                         <h3>Skills:</h3>
