portfolio detail page updates

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                 </div>
                             </div>
                             <div class="portfolio-info">
-                                <h2>Austin MN Symphony Orchestra</h2>
+                                <h2>Austin MN Symphony Website</h2>
                             </div>
                         </div>
                     </div>
@@ -201,7 +201,7 @@
                                 </div>
                             </div>
                             <div class="portfolio-info ">
-                                <h2>Riverland Student Success Center</h2>
+                                <h2>Riverland SSC Marketing Materials</h2>
                             </div>
                         </div>
                     </div>
@@ -256,7 +256,7 @@
                                 </div>
                             </div>
                             <div class="portfolio-info ">
-                                <h2>Career 911 Northwestern MOOC</h2>
+                                <h2>Career 911 MOOC</h2>
                             </div>
                         </div>
                     </div>
