--- a/portfolio-pages/dfa-badge.html
+++ b/portfolio-pages/dfa-badge.html
@@ -64,22 +64,23 @@
                     </div>
                     <div class="project-info overflow">
                         <h3>Project Info</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempus nibh sed elimttis adipiscing. Fusce in hendrerit purus. Suspendisse potenti. Proin quis eros odio, dapibus dictum mauris. Donec nisi libero, adipiscing id pretium eget, consectetur sit amet leo. Nam at eros quis mi egestas fringilla non nec purus.</p>
+                        <p>I was part of a team tasked with designing a new motivation system for Design for America studios housed in universities across the country. Our badging system was designed to motivate students in the Design for America studios across the country to complete the design process for design-based projects they are completing. Specifically, our badging system used established principles of motivation, practice and feedback, and mastery learning to improve the outcomes for students both in completion and quality of work. The badging system was designed with multiple levels such that each badge can be earned at a bronze, silver, or gold level. This was done in order to motivate students to want to achieve each level of the badge and thus complete the design process more completely. Every DFA team can complete a bronze level badge quickly and easily, motivating them to complete the task. However, as teams work more on the process for each badge, they can earn a silver or gold level badge, rewarding them for taking more time with each step of the design process. This was also done to incorporate practice and feedback as well as mastery of the design process into the badging system. The requirements for earning each badge have been clearly identified and the process streamlined for studio leads to approve the badge, making the system easy to both reward teams for completion and provide feedback without giving a grade or other form of formal critique. </p>
+                      <p>The full design proposal is included in the live preview link with the high level blueprint for how our badging system would work provided both in the master design document and the image on this page. As part of the process we completed all of these steps:</p>
                         <ul class="elements">
-                            <li><i class="fa fa-angle-right"></i> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                            <li><i class="fa fa-angle-right"></i> Donec tincidunt felis quis ipsum porttitor, non rutrum lorem rhoncus.</li>
-                            <li><i class="fa fa-angle-right"></i> Nam in quam consectetur nulla placerat dapibus ut ut nunc.</li>
+                            <li><i class="fa fa-angle-right"></i> Focused on the problem through expert modeling.</li>
+                            <li><i class="fa fa-angle-right"></i> Designed and user tested prototypes of badges and badge monitoring systems.</li>
+                            <li><i class="fa fa-angle-right"></i> Created a comprehensive blueprint for the badging system.</li>
+                            <li><i class="fa fa-angle-right"></i> Participated in regular feedback and critique sessions to iterate on our design.</li>
+                            <li><i class="fa fa-angle-right"></i> Formally presented the design ideas and proposals to the client.</li>
                         </ul>
                     </div>
                     <div class="skills overflow">
                         <h3>Skills:</h3>
                         <ul class="nav navbar-nav navbar-default">
-                            <li><a href="#"><i class="fa fa-check-square"></i>Design</a></li>
-                            <li><a href="#"><i class="fa fa-check-square"></i>HTML/CSS</a></li>
-                            <li><a href="#"><i class="fa fa-check-square"></i>JavaScript/Jquery</a></li>
+                            <li><a href="#"><i class="fa fa-check-square"></i>User-Centered Design Process</a></li>
+                            <li><a href="#"><i class="fa fa-check-square"></i>Graphic Design</a></li>
+                            <li><a href="#"><i class="fa fa-check-square"></i>Learning Theory</a></li>
                             <li><a href="#"><i class="fa fa-check-square"></i>Web Development</a></li>
-                            <li><a href="#"><i class="fa fa-check-square"></i>Multimedia Production</a></li>
-                            <li><a href="#"><i class="fa fa-check-square"></i>Elearning Authoring</a></li>
                         </ul>
                     </div>
                     <div class="client overflow">
@@ -105,16 +106,16 @@
                     <div class="portfolio-wrapper">
                         <div class="portfolio-single">
                             <div class="portfolio-thumb">
-                                <img src="../images/portfolio/11212.jpg" class="img-responsive" alt="">
+                                <img src="../images/portfolio/11.png" class="img-responsive" alt="">
                             </div>
                             <div class="portfolio-view">
                                   <ul class="nav nav-pills">
-                                      <li><a href="../portfolio-pages/dfa-badge.html"><i class="fa fa-link"></i></a></li>
+                                      <li><a href="../portfolio-pages/mooc.html"><i class="fa fa-link"></i></a></li>
                                   </ul>
                             </div>
                         </div>
                         <div class="portfolio-info ">
-                            <h2>DFA Badges</h2>
+                            <h2>Northwestern MOOC</h2>
                         </div>
                     </div>
                 </div>
