--- a/portfolio-pages/mooc.html
+++ b/portfolio-pages/mooc.html
@@ -178,17 +178,17 @@
                     <div class="portfolio-wrapper">
                         <div class="portfolio-single">
                             <div class="portfolio-thumb">
-                                <img src="../images/portfolio/11.png" class="img-responsive" alt="">
+                                <img src="../images/portfolio/11212.jpg" class="img-responsive" alt="">
                             </div>
                             <div class="portfolio-view">
                                   <ul class="nav nav-pills">
-                                      <li><a href="../portfolio-pages/mooc.html"><i class="fa fa-link"></i></a></li>
+                                      <li><a href="../portfolio-pages/dfa-badge.html"><i class="fa fa-link"></i></a></li>
 
                                   </ul>
                               </div>
                         </div>
                         <div class="portfolio-info ">
-                            <h2>Career 911 Northwestern MOOC</h2>
+                            <h2>DFA Badges</h2>
                         </div>
                     </div>
                 </div>
