Added virtual orientation project details and other minor updates

--- a/portfolio-pages/parent-orientation.html
+++ b/portfolio-pages/parent-orientation.html
@@ -74,7 +74,7 @@
                         <li>Understand the importance of personal responsibility as it relates to being a successful college student.</li>
 
                       </ol>
-                      <p>The online modules were designed to aling to these learning outcomes by providing information in discrete chunks of informations which built off of knowledge from prior modules. The assessment process is described in detail in the following presentation presented to the New Student Orientation Board and the Student Success and Retention Committee:</p>
+                      <p>The online modules were designed to align to these learning outcomes by providing information in discrete chunks of informations which built off of knowledge from prior modules. The assessment process is described in detail in the following presentation presented to the New Student Orientation Board and the Student Success and Retention Committee:</p>
                       <iframe class="gslides" src="https://docs.google.com/presentation/d/1pX2n0hFH7qrHH2Ti_M8foeRnVxMxiBq8817RsGO2hSA/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
                         
                     </div>
