--- a/portfolio-pages/virtual-orientation.html
+++ b/portfolio-pages/virtual-orientation.html
@@ -59,16 +59,17 @@
                         <h2 class="bold">MSHE Virtual Student Orientation </h2>
                         <ul class="nav navbar-nav navbar-default">
                             <li><a href="#"><i class="fa fa-clock-o"></i>2014-2015</a></li>
-                            <li><a href="#"><i class="fa fa-tags"></i>Web Design, ELearning</a></li>
+                            <li><a href="#"><i class="fa fa-tags"></i>Web Design, ELearning, Assessment</a></li>
                         </ul>
                     </div>
                     <div class="project-info overflow">
                         <h3>Project Info</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempus nibh sed elimttis adipiscing. Fusce in hendrerit purus. Suspendisse potenti. Proin quis eros odio, dapibus dictum mauris. Donec nisi libero, adipiscing id pretium eget, consectetur sit amet leo. Nam at eros quis mi egestas fringilla non nec purus.</p>
+                        <p>New student virtual orientation was designed and conceived from scratch in order to provide a seamless onboarding experience for incoming students in the Master of Science in Higher Education Administration and Policy program and Northwestern University. After estalishing information priorities for incoming students, we designed a comprehensive module-based online orientation which supported students in their academic preparation, policies, financial aid, housing and relocation experience, and introduction to student life on and off campus through a combination of videos, wrtten content, and interactive matieral. Producing the virtual orientation included:</p>
                         <ul class="elements">
-                            <li><i class="fa fa-angle-right"></i> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                            <li><i class="fa fa-angle-right"></i> Donec tincidunt felis quis ipsum porttitor, non rutrum lorem rhoncus.</li>
-                            <li><i class="fa fa-angle-right"></i> Nam in quam consectetur nulla placerat dapibus ut ut nunc.</li>
+                            <li><i class="fa fa-angle-right"></i> Filming, producing, and editing over 15 interviews with current students faculty and staff members as the core component of the orientation.</li>
+                            <li><i class="fa fa-angle-right"></i> Creating interactive software demonstrations for teaching the Canvas LMS, course registration, course planning, and financial aid systems.</li>
+                            <li><i class="fa fa-angle-right"></i> Establishing methods of building and supporting online community through discussion boards and social media integration for content.</li>
+                            <li><i class="fa fa-angle-right"></i> And, finally, building assessment techniques through a combination of assessment questions and completion benchmarks.</li>
                         </ul>
                     </div>
                     <div class="skills overflow">
@@ -76,7 +77,6 @@
                         <ul class="nav navbar-nav navbar-default">
                             <li><a href="#"><i class="fa fa-check-square"></i>Design</a></li>
                             <li><a href="#"><i class="fa fa-check-square"></i>HTML/CSS</a></li>
-                            <li><a href="#"><i class="fa fa-check-square"></i>JavaScript/Jquery</a></li>
                             <li><a href="#"><i class="fa fa-check-square"></i>Web Development</a></li>
                             <li><a href="#"><i class="fa fa-check-square"></i>Multimedia Production</a></li>
                             <li><a href="#"><i class="fa fa-check-square"></i>Elearning Authoring</a></li>
