Portfolio detail pages updates

--- a/portfolio-pages/parent-orientation.html
+++ b/portfolio-pages/parent-orientation.html
@@ -145,19 +145,20 @@
                     <div class="portfolio-wrapper">
                         <div class="portfolio-single">
                             <div class="portfolio-thumb">
-                                <img src="../images/portfolio/5.png" class="img-responsive" alt="">
+                                <img src="../images/portfolio/7.png" class="img-responsive" alt="">
                             </div>
                             <div class="portfolio-view">
                                   <ul class="nav nav-pills">
-                                      <li><a href="../portfolio-pages/training-manual.html"><i class="fa fa-link"></i></a></li>
+                                      <li><a href="../portfolio-pages/oakton-assessment.html"><i class="fa fa-link"></i></a></li>
                                   </ul>
                             </div>
                         </div>
                         <div class="portfolio-info ">
-                            <h2>Tutor Training Manual</h2>
+                            <h2>Learning Outcome Assessment</h2>
                         </div>
                     </div>
                 </div>
+              
             </div>
         </div>
     </section>
