--- a/portfolio-pages/mooc.html
+++ b/portfolio-pages/mooc.html
@@ -59,7 +59,7 @@
                         <h2 class="bold">Career 9-1-1 Northwestern Feinberg MOOC </h2>
                         <ul class="nav navbar-nav navbar-default">
                             <li><a href="#"><i class="fa fa-clock-o"></i>2015</a></li>
-                            <li><a href="#"><i class="fa fa-tags"></i>Web Design, ELearning</a></li>
+                            <li><a href="#"><i class="fa fa-tags"></i>ELearning</a></li>
                         </ul>
                     </div>
                     <div class="project-info overflow">
@@ -76,7 +76,6 @@
                         <ul class="nav navbar-nav navbar-default">
                             <li><a href="#"><i class="fa fa-check-square"></i>Design</a></li>
                             <li><a href="#"><i class="fa fa-check-square"></i>HTML/CSS</a></li>
-                            <li><a href="#"><i class="fa fa-check-square"></i>Web Development</a></li>
                             <li><a href="#"><i class="fa fa-check-square"></i>Adobe InDesign, Illustrator, Photoshop</a></li>
                             <li><a href="#"><i class="fa fa-check-square"></i>Elearning Authoring</a></li>
                             <li><a href="#"><i class="fa fa-check-square"></i>Learning Theory</a></li>
@@ -133,25 +132,6 @@
                         </div>
                         <div class="portfolio-info ">
                             <h2>MSHE Student Resources Site</h2>
-                        </div>
-                    </div>
-                </div>
-              
-              <div class="col-sm-3">
-                    <div class="portfolio-wrapper">
-                        <div class="portfolio-single">
-                            <div class="portfolio-thumb">
-                                <img src="../images/portfolio/10.png" class="img-responsive" alt="">
-                            </div>
-                            <div class="portfolio-view">
-                                  <ul class="nav nav-pills">
-                                      <li><a href="../"><i class="fa fa-link"></i></a></li>
-
-                                  </ul>
-                              </div>
-                        </div>
-                        <div class="portfolio-info ">
-                            <h2>MSHE Course Design</h2>
                         </div>
                     </div>
                 </div>
