--- a/portfolio-pages/mshe-resources.html
+++ b/portfolio-pages/mshe-resources.html
@@ -139,17 +139,17 @@
                     <div class="portfolio-wrapper">
                         <div class="portfolio-single">
                             <div class="portfolio-thumb">
-                                <img src="../images/portfolio/10.png" class="img-responsive" alt="">
+                                <img src="../images/portfolio/11.png" class="img-responsive" alt="">
                             </div>
                             <div class="portfolio-view">
                                   <ul class="nav nav-pills">
-                                      <li><a href="../"><i class="fa fa-link"></i></a></li>
+                                      <li><a href="../portfolio-pages/mooc.html"><i class="fa fa-link"></i></a></li>
 
                                   </ul>
                               </div>
                         </div>
                         <div class="portfolio-info ">
-                            <h2>MSHE Course Design</h2>
+                            <h2>Career 911 MOOC</h2>
                         </div>
                     </div>
                 </div>
