--- a/portfolio-pages/oakton-assessment.html
+++ b/portfolio-pages/oakton-assessment.html
@@ -119,6 +119,23 @@
                         </div>
                     </div>
                 </div>
+              <div class="col-sm-3">
+                    <div class="portfolio-wrapper">
+                        <div class="portfolio-single">
+                            <div class="portfolio-thumb">
+                                <img src="../images/portfolio/3.png" class="img-responsive" alt="">
+                            </div>
+                            <div class="portfolio-view">
+                                  <ul class="nav nav-pills">
+                                      <li><a href="../portfolio-pages/virtual-orientation.html"><i class="fa fa-link"></i></a></li>
+                                  </ul>
+                            </div>
+                        </div>
+                        <div class="portfolio-info ">
+                            <h2>Virtual New Student Orientation</h2>
+                        </div>
+                    </div>
+                </div>
                 <div class="col-sm-3">
                     <div class="portfolio-wrapper">
                         <div class="portfolio-single">
