--- a/portfolio-pages/training-manual.html
+++ b/portfolio-pages/training-manual.html
@@ -100,41 +100,7 @@
         <div class="container">
             <div class="row">
                 <h1 class="title text-center">Related Work</h1>
-                <div class="col-sm-3">
-                    <div class="portfolio-wrapper">
-                        <div class="portfolio-single">
-                            <div class="portfolio-thumb">
-                                <img src="../images/portfolio/3.png" class="img-responsive" alt="">
-                            </div>
-                            <div class="portfolio-view">
-                                  <ul class="nav nav-pills">
-                                      <li><a href="../portfolio-pages/virtual-orientation.html"><i class="fa fa-link"></i></a></li>
-                                  </ul>
-                            </div>
-                        </div>
-                        <div class="portfolio-info ">
-                            <h2>Online Virtual Orientation</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="portfolio-wrapper">
-                        <div class="portfolio-single">
-                            <div class="portfolio-thumb">
-                                <img src="../images/portfolio/6.png" class="img-responsive" alt="">
-                            </div>
-                            <div class="portfolio-view">
-                                  <ul class="nav nav-pills">
-                                      <li><a href="../portfolio-pages/parent-orientation.html"><i class="fa fa-link"></i></a></li>
-
-                                  </ul>
-                              </div>
-                        </div>
-                        <div class="portfolio-info ">
-                            <h2>Online Parent Orientation</h2>
-                        </div>
-                    </div>
-                </div>
+                
                 <div class="col-sm-3">
                     <div class="portfolio-wrapper">
                         <div class="portfolio-single">
@@ -149,6 +115,59 @@
                         </div>
                         <div class="portfolio-info ">
                             <h2>Virtual Tutor Training</h2>
+                        </div>
+                    </div>
+                </div>
+              <div class="col-sm-3">
+                    <div class="portfolio-wrapper">
+                        <div class="portfolio-single">
+                            <div class="portfolio-thumb">
+                                <img src="../images/portfolio/8.png" class="img-responsive" alt="">
+                            </div>
+                            <div class="portfolio-view">
+                                  <ul class="nav nav-pills">
+                                      <li><a href="../portfolio-pages/ssc-marketing.html"><i class="fa fa-link"></i></a></li>
+                                  </ul>
+                            </div>
+                        </div>
+                        <div class="portfolio-info ">
+                            <h2>Riverland Marketing Materials</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="portfolio-wrapper">
+                        <div class="portfolio-single">
+                            <div class="portfolio-thumb">
+                                <img src="../images/portfolio/11212.jpg" class="img-responsive" alt="">
+                            </div>
+                            <div class="portfolio-view">
+                                  <ul class="nav nav-pills">
+                                      <li><a href="../portfolio-pages/dfa-badge.html"><i class="fa fa-link"></i></a></li>
+
+                                  </ul>
+                              </div>
+                        </div>
+                        <div class="portfolio-info ">
+                            <h2>DFA Badges</h2>
+                        </div>
+                    </div>
+                </div>
+              <div class="col-sm-3">
+                    <div class="portfolio-wrapper">
+                        <div class="portfolio-single">
+                            <div class="portfolio-thumb">
+                                <img src="../images/portfolio/11.png" class="img-responsive" alt="">
+                            </div>
+                            <div class="portfolio-view">
+                                  <ul class="nav nav-pills">
+                                      <li><a href="../portfolio-pages/mooc.html"><i class="fa fa-link"></i></a></li>
+
+                                  </ul>
+                              </div>
+                        </div>
+                        <div class="portfolio-info ">
+                            <h2>Career 911 MOOC</h2>
                         </div>
                     </div>
                 </div>
