--- a/portfolio-pages/tutor-training.html
+++ b/portfolio-pages/tutor-training.html
@@ -102,42 +102,7 @@
         <div class="container">
             <div class="row">
                 <h1 class="title text-center">Related Work</h1>
-                <div class="col-sm-3">
-                    <div class="portfolio-wrapper">
-                        <div class="portfolio-single">
-                            <div class="portfolio-thumb">
-                                <img src="../images/portfolio/3.png" class="img-responsive" alt="">
-                            </div>
-                            <div class="portfolio-view">
-                                  <ul class="nav nav-pills">
-                                      <li><a href="../index.html"><i class="fa fa-link"></i></a></li>
-                                  </ul>
-                            </div>
-                        </div>
-                        <div class="portfolio-info ">
-                            <h2>Online Virtual Orientation</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="portfolio-wrapper">
-                        <div class="portfolio-single">
-                            <div class="portfolio-thumb">
-                                <img src="../images/portfolio/6.png" class="img-responsive" alt="">
-                            </div>
-                            <div class="portfolio-view">
-                                  <ul class="nav nav-pills">
-                                      <li><a href="../portfolio-pages/parent-orientation.html"><i class="fa fa-link"></i></a></li>
-
-                                  </ul>
-                              </div>
-                        </div>
-                        <div class="portfolio-info ">
-                            <h2>Online Parent Orientation</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-3">
+              <div class="col-sm-3">
                     <div class="portfolio-wrapper">
                         <div class="portfolio-single">
                             <div class="portfolio-thumb">
@@ -154,20 +119,37 @@
                         </div>
                     </div>
                 </div>
-              <div class="col-sm-3">
+                <div class="col-sm-3">
                     <div class="portfolio-wrapper">
                         <div class="portfolio-single">
                             <div class="portfolio-thumb">
-                                <img src="../images/portfolio/10.png" class="img-responsive" alt="">
+                                <img src="../images/portfolio/11.png" class="img-responsive" alt="">
                             </div>
                             <div class="portfolio-view">
                                   <ul class="nav nav-pills">
-                                      <li><a href="../"><i class="fa fa-link"></i></a></li>
+                                      <li><a href="../portfolio-pages/mooc.html"><i class="fa fa-link"></i></a></li>
                                   </ul>
                             </div>
                         </div>
                         <div class="portfolio-info ">
-                            <h2>MSHE Course Design</h2>
+                            <h2>Career 911 MOOC</h2>
+                        </div>
+                    </div>
+                </div>
+              <div class="col-sm-3">
+                    <div class="portfolio-wrapper">
+                        <div class="portfolio-single">
+                            <div class="portfolio-thumb">
+                                <img src="../images/portfolio/11212.jpg" class="img-responsive" alt="">
+                            </div>
+                            <div class="portfolio-view">
+                                  <ul class="nav nav-pills">
+                                      <li><a href="../portfolio-pages/dfa-badge.html"><i class="fa fa-link"></i></a></li>
+                                  </ul>
+                            </div>
+                        </div>
+                        <div class="portfolio-info ">
+                            <h2>DFA Badges</h2>
                         </div>
                     </div>
                 </div>
