updated index page link

--- a/index.html
+++ b/index.html
@@ -195,13 +195,13 @@
                                 </div>
                                 <div class="portfolio-view">
                                     <ul class="nav nav-pills">
-                                        <li><a href="portfolio-details.html"><i class="fa fa-link"></i></a></li>
+                                        <li><a href="portfolio-pages/ssc-marketing.html"><i class="fa fa-link"></i></a></li>
                                         
                                     </ul>
                                 </div>
                             </div>
                             <div class="portfolio-info ">
-                                <h2>Riverland SSC Marketing Materials</h2>
+                                <h2>Riverland Marketing Materials</h2>
                             </div>
                         </div>
                     </div>
