updates to home page footer and partials

--- a/portfolio-pages/training-preview.html
+++ b/portfolio-pages/training-preview.html
@@ -38,8 +38,8 @@
                 <div class="row">
                     <div class="action">
                         <div class="col-sm-12">
-                            <h1 class="title">Life Preview</h1>
-                            <p>Tutoring Training Manual</p>
+                            <h1 class="title">Live Preview</h1>
+                            <p>Online Tutor Training Modules</p>
                         </div>
                     </div>
                 </div>
@@ -249,6 +249,12 @@
     <script type="text/javascript" src="../js/bootstrap.min.js"></script>
     <script type="text/javascript" src="../js/lightbox.min.js"></script>
     <script type="text/javascript" src="../js/wow.min.js"></script>
-    <script type="text/javascript" src="../js/main.js"></script>  
+    <script type="text/javascript" src="../js/main.js"></script>
+<script type="text/javascript">
+  $(document).ready(function(){
+      $('#header').load('../partials/header.html');
+      $('#footer').load('../partials/footer.html');
+    });
+    </script>
 </body>
 </html>
