--- a/portfolio-pages/virtual-orientation.html
+++ b/portfolio-pages/virtual-orientation.html
@@ -191,6 +191,12 @@
     <script type="text/javascript" src="../js/bootstrap.min.js"></script>
     <script type="text/javascript" src="../js/lightbox.min.js"></script>
     <script type="text/javascript" src="../js/wow.min.js"></script>
-    <script type="text/javascript" src="../js/main.js"></script>  
+    <script type="text/javascript" src="../js/main.js"></script>
+  <script type="text/javascript">
+  $(document).ready(function(){
+      $('#header').load('../partials/header.html');
+      $('#footer').load('../partials/footer.html');
+    });
+    </script>
 </body>
 </html>
